Fix animation on mobile

--- a/frontend/stylesheets/home.scss
+++ b/frontend/stylesheets/home.scss
@@ -15,7 +15,7 @@
   &__introbox {
     text-align: center;
     &--heading {
-      margin-top: 75px;
+      margin-top: 30vh;
       @include gotham-bold;
       text-transform: uppercase;
       font-size: 42px;
