--- a/frontend/stylesheets/styles.scss
+++ b/frontend/stylesheets/styles.scss
@@ -170,6 +170,7 @@ $navbar-element-height: 35px;
   padding-top: $navbar-height;
   padding-bottom: #{$footer-height + 50px};
   @media (max-width: $screen-xs-max) {
+    padding-top: 0;
     padding-bottom: #{$footer-height-mobile + 35px };
   }
 }
